--- a/build.gradle
+++ b/build.gradle
@@ -74,10 +74,13 @@ dependencies {
 
     testImplementation "org.codehaus.groovy:groovy-all:2.5.13"
     testImplementation "com.android.tools.build:gradle:$agpVersion"
-    testImplementation "junit:junit:4.13"
-    testImplementation dependencies.create("org.spockframework:spock-core:1.3-groovy-2.5") {
+    testImplementation dependencies.create("org.spockframework:spock-core:2.0-M3-groovy-2.5") {
         exclude module: "groovy-all"
     }
+}
+
+test {
+    useJUnitPlatform()
 }
 
 tasks {
