--- a/build.gradle
+++ b/build.gradle
@@ -158,6 +158,7 @@ tasks.withType(GroovyCompile) {
         compilerArgs << "-Xlint:all"            // Turn on all warnings
         compilerArgs << "-Xlint:-options"       // Turn off "missing" bootclasspath warning
         compilerArgs << "-Werror"               // Turn warnings into errors
+        incremental = true
         encoding = "utf-8"
         fork = true
     }
