--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ repositories {
     google()
 }
 
-def agpVersion = "4.1.0-rc03"
+def agpVersion = "4.1.0"
 dependencies {
     implementation platform("org.jetbrains.kotlin:kotlin-bom")
     implementation "com.google.code.gson:gson:2.8.6"
@@ -248,9 +248,9 @@ pluginBundle {
 
 // Convenient entrypoint for the "upload snapshot" CI action.
 // It's easier to do the version check here than in a Github action.
-def isSnapshot = providers.gradleProperty("VERSION_NAME").forUseAtConfigurationTime().get().endsWith("-SNAPSHOT")
+def isSnapshot = providers.gradleProperty("VERSION_NAME").forUseAtConfigurationTime().map { it.endsWith("-SNAPSHOT") }
 tasks.register("uploadSnapshot") {
-    if (isSnapshot) {
+    if (isSnapshot.get()) {
         dependsOn("uploadArchives")
     } else {
         doFirst {
