Fix broken task-dependency chain under AGP < 3.6 (#362)
Our integration tests broke subtly, at some point in the past. I didn't notice because our github action cached the Gradle build-cache folders in each individual integration-test, so the expected APK files were still there, despite the tasks that produce them never running.

In fact, I only noticed when switching to a new laptop where I also didn't have the build-cache folders handy.

This PR fixes both the dependency problem, and the CI problem - no more caching anything to do with integration tests.

It also removes a dead function.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
             ~/.gradle/caches
             ~/.gradle/wrapper
             **/build-cache
+            !tmp
           key: ${{ runner.os }}-${{ matrix.jdk }}-gradle-${{ hashFiles('**/*.gradle*') }}
           restore-keys: |
             ${{ runner.os }}-${{ matrix.jdk }}-gradle-
