--- a/build.gradle
+++ b/build.gradle
@@ -21,12 +21,13 @@ plugins {
     id "groovy"
     id "com.microsoft.thrifty" version "2.1.1"
     id "java-gradle-plugin"
-    id "com.vanniktech.maven.publish" version "0.12.0"
+    id "com.vanniktech.maven.publish" version "0.13.0"
     id "com.gradle.plugin-publish" version "0.12.0"
 }
 
 group = GROUP
 version = VERSION_NAME
+description = POM_DESCRIPTION
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 
@@ -222,6 +223,8 @@ gradlePlugin {
         dexcount {
             id = "com.getkeepsafe.dexcount"
             implementationClass = "com.getkeepsafe.dexcount.DexMethodCountPlugin"
+            displayName = POM_NAME
+            description = POM_DESCRIPTION
         }
     }
 }
@@ -236,6 +239,7 @@ pluginBundle {
         dexcount {
             id = "com.getkeepsafe.dexcount"
             displayName = POM_NAME
+            description = POM_DESCRIPTION
         }
     }
 
