Add support for AGP 7.0.0.  Whew! (#373)
Boy was this a big one. AGP 7.0.0 changes a great number of things we'd taken for granted:

- Revision is moved out of AGP into a companion com.android.tools:repository artifact
- dx is just gone (replaced by D8 which is seemingly not available via BuildToolInfo)
- Proguard is gone (replaced by R8, same story)
- ArtifactType is gone (we hardly knew ye), replaced by SingleArtifact and MultipleArtifact.

To work around these changes, this PR:

- Adds the repository artifact as a compileOnly dependency. Thankfully Revision wasn't repackaged.
- Adds a reflection-based replacement for ArtifactType
- Replaces the proguard guts of Deobfuscator with our own mapping-file parsing code, since R8's equivalents are... obfuscated and not public.
- Replaces the use of dx in DexFile with programmatic use of the D8 library. This is actually awesome in terms of code quality, but is another source of future API drift.
- Updates to Gradle 7.0.2 (required for AGP 7.0.0)
- As a result of ^^^ updates Groovy and Spock to 3 and 2, respectively
- Fixes a bunch of other nits.

--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ repositories {
     google()
 }
 
-def agpVersion = "4.2.1"
+def agpVersion = "7.0.0-beta03"
 dependencies {
     implementation platform("org.jetbrains.kotlin:kotlin-bom")
     implementation "com.google.code.gson:gson:2.8.6"
@@ -70,11 +70,15 @@ dependencies {
     implementation "com.microsoft.thrifty:thrifty-runtime-ktx:2.1.1"
 
     compileOnly "com.android.tools.build:gradle:$agpVersion"
+    compileOnly "com.android.tools:r8:2.2.64"
+    compileOnly "com.android.tools:repository:30.0.0-beta03"
     additionalPluginClasspath "com.android.tools.build:gradle:$agpVersion"
+    additionalPluginClasspath "com.android.tools:r8:2.2.64"
+    additionalPluginClasspath "com.android.tools:repository:30.0.0-beta03"
 
-    testImplementation "org.codehaus.groovy:groovy-all:2.5.13"
+    testImplementation "org.codehaus.groovy:groovy-all:3.0.7"
     testImplementation "com.android.tools.build:gradle:$agpVersion"
-    testImplementation dependencies.create("org.spockframework:spock-core:1.3-groovy-2.5") {
+    testImplementation dependencies.create("org.spockframework:spock-core:2.0-groovy-3.0") {
         exclude module: "groovy-all"
     }
 }
@@ -110,7 +114,7 @@ def integrationTest = tasks.register("integrationTest", Test) { t ->
 
     t.jvmArgs(
         "-XX:+HeapDumpOnOutOfMemoryError", "-XX:GCTimeLimit=20", "-XX:GCHeapFreeLimit=10",
-        "-XX:MaxMetaspaceSize=1g"
+        "-XX:MaxMetaspaceSize=2g"
     )
 
     t.beforeTest { testCase ->
@@ -177,6 +181,8 @@ tasks.withType(Test) {
         showStackTraces true
         events "failed", "skipped"
     }
+
+    useJUnitPlatform()
 
     failFast = true
     maxParallelForks = isCi ? 1 : Runtime.runtime.availableProcessors().intdiv(2) ?: 1
