--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ repositories {
     google()
 }
 
-def agpVersion = "7.0.0-beta03"
+def agpVersion = "7.1.0-alpha02"
 dependencies {
     implementation platform("org.jetbrains.kotlin:kotlin-bom")
     implementation "com.google.code.gson:gson:2.8.6"
@@ -71,7 +71,7 @@ dependencies {
 
     compileOnly "com.android.tools.build:gradle:$agpVersion"
     compileOnly "com.android.tools:r8:2.2.64"
-    compileOnly "com.android.tools:repository:30.0.0-beta03"
+    compileOnly "com.android.tools:repository:30.1.0-alpha02"
     additionalPluginClasspath "com.android.tools.build:gradle:$agpVersion"
 
     testImplementation "org.codehaus.groovy:groovy-all:3.0.7"
