--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,11 @@ jar {
 }
 
 repositories {
-    mavenLocal()
+    mavenLocal {
+        content {
+            includeGroup "com.getkeepsafe.dexcount"
+        }
+    }
     gradlePluginPortal()
     google()
 }
@@ -124,6 +128,8 @@ def installForTesting = tasks.register("installForIntegrationTests") { t ->
 def integrationTest = tasks.register("integrationTest", Test) { t ->
     t.dependsOn installForTesting
     t.mustRunAfter tasks.named("test")
+
+    t.outputs.cacheIf { false }
 
     t.group "verification"
     t.description "Runs integration tests."
