--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 GROUP=com.getkeepsafe.dexcount
-VERSION_NAME=3.0.0-SNAPSHOT
+VERSION_NAME=3.0.1-SNAPSHOT
 
 POM_ARTIFACT_ID=dexcount-gradle-plugin
 POM_NAME=Dexcount Gradle Plugin
@@ -8,8 +8,8 @@ POM_PACKAGING=jar
 POM_DESCRIPTION=A Gradle plugin for counting methods in an .apk
 POM_INCEPTION_YEAR=2015
 
-POM_URL=http://github.com/KeepSafe/dexcount-gradle-plugin/
-POM_SCM_URL=http://github.com/KeepSafe/dexcount-gradle-plugin/
+POM_URL=https://github.com/KeepSafe/dexcount-gradle-plugin/
+POM_SCM_URL=https://github.com/KeepSafe/dexcount-gradle-plugin/
 POM_SCM_CONNECTION=scm:git:git://github.com/KeepSafe/dexcount-gradle-plugin.git
 POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/KeepSafe/dexcount-gradle-plugin.git
 
