--- a/src/integrationTest/projects/integration/build.gradle
+++ b/src/integrationTest/projects/integration/build.gradle
@@ -6,8 +6,16 @@ buildscript {
     }
 
     repositories {
-        mavenLocal()
-        gradlePluginPortal()
+        mavenLocal {
+            content {
+                includeGroup "com.getkeepsafe.dexcount"
+            }
+        }
+        gradlePluginPortal {
+            content {
+                excludeGroup "com.getkeepsafe.dexcount"
+            }
+        }
         google()
     }
 
@@ -25,8 +33,16 @@ buildscript {
 
 allprojects {
     repositories {
-        mavenLocal()
-        gradlePluginPortal()
+        mavenLocal {
+            content {
+                includeGroup "com.getkeepsafe.dexcount"
+            }
+        }
+        gradlePluginPortal {
+            content {
+                excludeGroup "com.getkeepsafe.dexcount"
+            }
+        }
         google()
     }
 }
