Support AGP 7.2.0-beta01 (#429)
* Support AGP 7.2.0-beta01

* Greedy little piggy, aren't you

* oink oink

* Oh, maybe I need to set that for integration-test projects, too

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ POM_DEVELOPER_ID=keepsafe
 POM_DEVELOPER_NAME=KeepSafe Software, Inc.
 
 org.gradle.caching=true
+org.gradle.jvmargs=-XX:MaxMetaspaceSize=1024m
