Javassist 3.27.0-GA -> 3.29.0-GA, clean up version declarations (#455)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,22 +1,19 @@
 [versions]
-agp = "7.4.0-alpha03" # Note that updates here usually require updates to androidTools-repository
 autoValue = "1.8.1"
-gson = "2.9.0"
-javassist = "3.27.0-GA"
 thrifty = "3.0.0"
 
 [libraries]
 
 # Build + runtime dependencies
-androidTools-agp = { module = "com.android.tools.build:gradle", version.ref = "agp" }
+androidTools-agp = "com.android.tools.build:gradle:7.4.0-alpha03" # Note that updates here usually require updates to androidTools-repository
 androidTools-r8 = "com.android.tools:r8:2.2.64"
 androidTools-repository = "com.android.tools:repository:30.4.0-alpha03"
 autoValue-processor = { module = "com.google.auto.value:auto-value", version.ref = "autoValue" }
 autoValue-annotations = { module = "com.google.auto.value:auto-value-annotations", version.ref = "autoValue" }
 commons-io = "commons-io:commons-io:2.10.0"
 commons-lang = "org.apache.commons:commons-lang3:3.12.0"
-gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
-javassist = { module = "org.javassist:javassist", version.ref = "javassist" }
+gson = "com.google.code.gson:gson:2.9.0"
+javassist = "org.javassist:javassist:3.29.0-GA"
 thriftyRuntime = { module = "com.microsoft.thrifty:thrifty-runtime-jvm", version.ref = "thrifty" }
 
 # Test dependenies
