gradle-maven-publish-plugin requires new config for Maven Central (#458)

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,5 +20,8 @@ POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=keepsafe
 POM_DEVELOPER_NAME=KeepSafe Software, Inc.
 
+RELEASE_SIGNING_ENABLED=true
+SONATYPE_HOST=DEFAULT
+
 org.gradle.caching=true
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=1024m
