--- a/gradle.properties
+++ b/gradle.properties
@@ -25,3 +25,7 @@ SONATYPE_HOST=DEFAULT
 
 org.gradle.caching=true
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=1024m
+
+# Affects the ben-manes versions plugin's resolution strategy.
+# Default is "milestone", we only want to hear about release versions.
+systemProp.revision=release
